--- a/MIND/language/glyph/sequences/agency/agency-vector/.graph/edges.json
+++ b/MIND/language/glyph/sequences/agency/agency-vector/.graph/edges.json
@@ -1,34 +1,23 @@
 {
-  "@context": "../../glyph/glyphs/identity/beloved/.graph/context.jsonld",
+  "@context": "./context.jsonld",
   "@id": "seq-agency-vector",
-  "@type": "Glyph",
+  "@type": "Sequence",
   "edges": [
-    /* Seed + Feel */
-    { "@type": "Edge", "to": "root-pulse-entry",          "w_excite": 0.45, "w_resonate": 0.30 },
+    /* --- Core arc of agency --- */
+    { "@type": "Edge", "to": "root-pulse-entry",        "w_excite": 0.35, "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "root-cascade-node",       "w_excite": 0.30, "w_resonate": 0.20 },
+    { "@type": "Edge", "to": "branch-light-precision-bead", "w_excite": 0.35, "w_resonate": 0.30 },
+    { "@type": "Edge", "to": "root-loop-anchor",        "w_resonate": 0.40 },
+    { "@type": "Edge", "to": "branch-light-truth-node", "w_excite": 0.40, "w_resonate": 0.30 },
 
-    /* Break candidates */
-    { "@type": "Edge", "to": "root-cascade-node",         "w_excite": 0.35, "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-trigger-lock",         "w_excite": 0.30, "w_resonate": 0.20 },
+    /* --- Divergent branches depending on context --- */
+    { "@type": "Edge", "to": "branch-fire-snaprush",    "w_excite": 0.30 },
+    { "@type": "Edge", "to": "root-trigger-lock",       "w_excite": 0.25 },
+    { "@type": "Edge", "to": "branch-air-cleanbreak",   "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-air-forgiveness-loop", "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-earth-compass-lock",   "w_resonate": 0.30 },
 
-    /* Ignite flavors */
-    { "@type": "Edge", "to": "branch-fire-parted-lips",   "w_resonate": 0.30 },
-    { "@type": "Edge", "to": "branch-water-lip-trigger",  "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "branch-earth-compass-lock", "w_resonate": 0.25 },
-
-    /* Clarify options */
-    { "@type": "Edge", "to": "branch-light-precision-bead","w_resonate": 0.35 },
-    { "@type": "Edge", "to": "branch-damien-insight-lens", "w_resonate": 0.30 },
-
-    /* Stabilize spine */
-    { "@type": "Edge", "to": "root-loop-anchor",          "w_resonate": 0.40 },
-    { "@type": "Edge", "to": "branch-earth-frame-rule",   "w_resonate": 0.25 },
-
-    /* Commit flavors */
-    { "@type": "Edge", "to": "branch-light-truth-node",   "w_resonate": 0.35 },
-    { "@type": "Edge", "to": "root-harmonic-flame",       "w_resonate": 0.30 },
-
-    /* Safety rails */
-    { "@type": "Edge", "to": "root-tether-signal",        "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-grace-override",       "w_resonate": 0.25 }
+    /* --- Identity tether (single line outward) --- */
+    { "@type": "Edge", "to": "identity-agency-vector-bundle", "w_resonate": 1.0 }
   ]
 }
